package com.aisafe.model;

public enum RouteStatus {
    ACTIVE,
    DEACTIVATED
}